Fix history displaying blank white space on smaller screens

--- a/dropins/SimpleHistorySidebarDropin.css
+++ b/dropins/SimpleHistorySidebarDropin.css
@@ -1,4 +1,3 @@
-
 .SimpleHistory__pageSidebar {
 	float: right;
 	width: 300px;
@@ -8,10 +7,9 @@
 @media only screen and (max-width: 850px) {
 	.SimpleHistory__pageSidebar {
 		width: 100%;
-		float: none;
 		margin-right: auto;
 		margin-top: 20px;
-	}	
+	}
 }
 
 .SimpleHistory__pageSidebar .inside {
@@ -25,4 +23,3 @@
 .SimpleHistory__pageSidebar .postbox .hndle {
 	cursor: auto;
 }
-
